Refactor FinancialRecordService and DashboardService for improved record retrieval and filtering